# Engeneer

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
include/exception/: base.h  concrete.h  handler.h  handling_mixin.h
include/glib/: collections.h
include/lexer/: helpers.h  lexer.h  source.h  token.h
include/lexer/source/: base.h  file.h  string.h
include/parser/: ast.h  combinators.hpp  functions.hpp  parser.h  parsers.h  type.h  visitor.h
include/parser/nodes/: base.h  concrete.h
include/parser/types/: basic.hpp  primitive.hpp  storage.hpp
include/visitor/: base.h  llvm.h  log.h
include/visitor/llvm/: compiler.h  type.h
notes/: .notes.swp  dump.ll  grammar  notes
src/: CMakeLists.txt  main.cpp
src/exception/: CMakeLists.txt  base.cpp  concrete.cpp  handler.cpp  handling_mixin.cpp
src/lexer/: CMakeLists.txt  helpers.cpp  lexer.cpp  source.cpp  token.cpp
src/lexer/source/: base.cpp  file.cpp  string.cpp
src/parser/: CMakeLists.txt  ast.cpp  parser.cpp  parsers.cpp  type.cpp  visitor.cpp
src/parser/nodes/: base.cpp  concrete.cpp
src/visitor/: CMakeLists.txt  base.cpp  llvm.cpp  log.cpp
src/visitor/llvm/: compiler.cpp  type.cpp
tests/: CMakeLists.txt  test.cpp
tests/lexer/: CMakeLists.txt  lexer_tests.cpp  source_tests.cpp  tests.cpp
tests/lexer/source/: file_tests.cpp  string_tests.cpp
tests/parser/: CMakeLists.txt  combinators_tests.cpp  parser_tests.cpp  tests.cpp
tests/visitor/: CMakeLists.txt  compiler.cpp  tests.cpp
